--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,3 +1,3 @@
 option_settings:
-    "aws:elasticbeanstalk:container:pytho":
-        WSGIPath: application:application
+  "aws:elasticbeanstalk:container:python":
+    WSGIPath: application:application
